--- a/src/app/cart/success-page/success-page.component.html
+++ b/src/app/cart/success-page/success-page.component.html
@@ -2,7 +2,7 @@
     <div class="success-header tan-background">
         <div class="success-title-container">
             <h2>YAY! YOUR RESERVATION WAS SUBMITTED</h2>
-            <p class="success-message tan-background">Your Reservation has been successfully submitted! You will receive a confirmation email within 3-5 business days. Please check your spam folder if you do not see it in your inbox.<br>Thank you for choosing Final Touch!</p>
+            <p class="success-message tan-background">You will receive a confirmation email within 3-5 business days. Please check your spam folder!<br>Thank you for choosing Final Touch Decor!</p>
         </div>
     </div>
     <div class="whats-next-image-container">
@@ -14,8 +14,8 @@
             <div class="step-text">
                 <p class="step-title">Confirmation Email</p>
                 <p class="step-description">
-                    You will receive a confirmation email within 3-5 business days from {{email}}. 
-                    Please check your spam folder if you dont see the email within 5 days.
+                    You'll receive a confirmation email within 3-5 business days from {{email}}. 
+                    Check your spam folder so you dont miss it!
                 </p>
             </div>
         </div>
@@ -23,8 +23,7 @@
             <div class="step-text">
                 <p class="step-title">Review Your Reservation Details</p>
                 <p class="step-description">
-                    Once the confirmation email arrives, double-check that all event information 
-                    (date, time, items reserved) is accurate.
+                    Once the email arrives, double-check that all event information is accurate.
                 </p>
             </div>
             <img class="step-image" src="/images/next-step-2.png" alt="Next Step 1">
@@ -34,7 +33,7 @@
             <div class="step-text">
                 <p class="step-title">Invoice & Payment Info</p>
                 <p class="step-description">
-                    An invoice will be sent to your email. Your full payment will be due 30 days before your event date. 
+                    Your full payment will be due 30 days before your event date via invoice.
                     Instructions will be included in the invoice.
                 </p>
             </div>
@@ -43,7 +42,7 @@
             <div class="step-text">
                 <p class="step-title">Pickup & Return Instructions</p>
                 <p class="step-description">
-                    Pickup and return take place in downtown Boise. You’ll receive detailed instructions as your event date approaches.
+                    Pickup and return take place in downtown Boise. You’ll receive detailed instructions as your event date approaches. Let us know if you'd like delivery right to your event!
                 </p>
             </div>
             <img class="step-image" src="/images/next-step-4.png" alt="Next Step 1">
@@ -54,7 +53,7 @@
                 <p class="step-title">Optional Add-Ons</p>
                 <p class="step-description">
                     Need to add more items or request delivery? Let us know as early as possible — additions are subject to availability.
-                    Have questions or changes? Email us at finaltouchinfo.info&#64;gmail.com or reply directly to your confirmation message.
+                    Have questions or changes? Email us at {{ email }} or reply directly to your confirmation message.
                 </p>
             </div>
         </div>
