--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
     <main>
         <router-outlet></router-outlet>
     </main>
-    <app-footer *ngIf="showHeader"></app-footer>
+    <app-footer></app-footer>
   </div>
