fix edit reservation

--- a/src/app/backoffice/admin-shared/admin-reservation-box/admin-reservation-box.component.html
+++ b/src/app/backoffice/admin-shared/admin-reservation-box/admin-reservation-box.component.html
@@ -127,7 +127,7 @@
             <div class="user-details-container">
                 <mat-form-field appearance="outline" class="full-width">
                     <mat-label>Name</mat-label>
-                    <input matInput [(ngModel)]="reservation.name" name="name" type="text" />
+                    <input matInput [(ngModel)]="editableReservation.name" name="name" type="text" />
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" class="full-width">
