--- a/src/app/features/product-page/product-page.component.html
+++ b/src/app/features/product-page/product-page.component.html
@@ -21,8 +21,7 @@
           <p *ngIf="product.custom">⭐ This item is customizable</p>
           <app-reserve [product]="product"></app-reserve>
         </div>
-        <div class="product-description-details">
-        
+        <div class="product-description-details desktop-mobile-only">
           <div class="tabs">
             <button 
               [class.active]="isActiveTab('details')" 
@@ -45,6 +44,28 @@
           </div>
         </div>
       </div>
+      <div class="product-description-details tablet-only">
+          <div class="tabs">
+            <button 
+              [class.active]="isActiveTab('details')" 
+              (click)="setActiveTab('details')">Product Details</button>
+            <button 
+              [class.active]="isActiveTab('shipping')" 
+              (click)="setActiveTab('shipping')">Pickup & Return</button>
+          </div>
+          
+          <div class="tab-content product-description" *ngIf="isActiveTab('details')">{{ product.description }}</div>
+          
+          <div class="tab-content" *ngIf="isActiveTab('shipping')">
+            All rentals must be picked up and returned by the renter in downtown Boise.
+            Delivery may be available upon request and is considered on a case-by-case basis, subject to availability.
+
+            <br><br>Late returns will incur a fee of ${{ DAILY_LATE_FEE }} per day, unless prior arrangements have been made with Final Touch Decor.
+
+            <br><br>The renter is liable for any damage or loss of items during the rental period. If an item is returned broken, 
+            missing, or significantly damaged, a replacement fee up to ${{ product.deposit }} may be charged, based on extent of damage.
+          </div>
+        </div>
     </div>
   </div>
 
