--- a/src/app/cart/success-page/success-page.component.html
+++ b/src/app/cart/success-page/success-page.component.html
@@ -15,7 +15,7 @@
                 <p class="step-title">Confirmation Email</p>
                 <p class="step-description">
                     You'll receive a confirmation email within 3-5 business days from {{email}}. 
-                    Check your spam folder so you dont miss it!
+                    Check your spam folder so you don't miss it!
                 </p>
             </div>
         </div>
@@ -62,8 +62,7 @@
                 <p class="step-title">Did You Order Any Custom Items?</p>
                 <p class="step-description">
                     Start thinking about how you want your custom items to look — feel free to gather inspiration photos! 
-                    Once your order is confirmed, we’ll chat about the design details.
-                    Not sure where to start? No worries — we’re more than happy to help bring your vision to life or handle the creative direction for you.
+                    Need help? We'd love to help bring your vision to life and handle the creative direction for you.
                 </p>
             </div>
             <img class="step-image" src="/images/next-step-6.png" alt="Next Step 1">
