--- a/src/app/features/product-page/product-page.component.html
+++ b/src/app/features/product-page/product-page.component.html
@@ -40,7 +40,7 @@
             <br><br>Late returns will incur a fee of ${{ DAILY_LATE_FEE }} per day, unless prior arrangements have been made with Final Touch Decor.
 
             <br><br>The renter is liable for any damage or loss of items during the rental period. If an item is returned broken, 
-            missing, or significantly damaged, a replacement fee up to ${{ product.deposit }} may be charged, based on extent of damage.
+            missing, or significantly damaged, a replacement fee up to ${{ product.deposit }} may be charged, based upon extent of damage.
           </div>
         </div>
       </div>
