--- a/src/app/home/homepage/hero/hero.component.html
+++ b/src/app/home/homepage/hero/hero.component.html
@@ -28,6 +28,7 @@
         helping reduce waste while adding unique charm. We also specialize in custom 
         signage to bring your vision to life.
     </p>
-    <u class="button main-font">ABOUT US</u>
+    <u (click)="routeToSection('/home', 'about')" class="button main-font about-link">ABOUT US</u>
+    <!-- todo link to about section -->
 </section>
 </body>
