--- a/src/app/home/homepage/how-it-works/how-it-works.component.html
+++ b/src/app/home/homepage/how-it-works/how-it-works.component.html
@@ -9,7 +9,7 @@
                 <p class="step-title">Browse & Book</p>
                 <p>
                     Explore our curated collection and submit a reservation request. Once confirmed, 
-                    we will be in contact to discuss details.
+                    we will contact you to discuss details.
                 </p>
             </div>
         </div>
