--- a/src/app/cart/cart-page/cart-page.component.css
+++ b/src/app/cart/cart-page/cart-page.component.css
@@ -54,8 +54,8 @@
 
 .error-minimum {
   color: red;
-  font-size: 0.9em;
-  margin-top: 4px;
+  font-size: 1.15rem;
+  /* margin-top: 4px; */
   font-weight: normal;
 }
 
