show tooltip on reserve for mobile

--- a/src/app/features/product-page/reserve/reserve.component.html
+++ b/src/app/features/product-page/reserve/reserve.component.html
@@ -51,6 +51,7 @@
       (click)="onCartClick()"
       [disabled]="!isDateRangeValid()"
       type="button"
+      (touchstart)="this.tooltip.show();"
     >
       ADD TO CART
     </button>
