add privacy policy

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,6 +6,7 @@
                 <a class="link" (click)="routeTo('/home', $event)">Home</a>
                 <a class="link" (click)="routeToSection('/home', 'howItWorks')">How it Works</a>
                 <a class="link" (click)="routeToSection('/home', 'about')">About Us</a>
+                <a class="link" (click)="routeTo('/privacy-policy', $event)">Privacy Policy</a>
             </div>
             <div class="links-container">
                 <p>SHOP</p>
