--- a/src/app/home/homepage/custom/custom.component.html
+++ b/src/app/home/homepage/custom/custom.component.html
@@ -16,6 +16,7 @@
         <picture class="custom-right-container">
           <source srcset="/images/custom-signage.webp" type="image/webp">
           <img class="custom-image" src="/images/custom-signage.png">
+          <p class="cursive-font red-font handmade-tagline">Handmade with love</p>
         </picture>
 
     </div>
