--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app-container">
+    <app-cookie-banner></app-cookie-banner>
     <app-header *ngIf="showHeader"></app-header>
     <main>
         <router-outlet></router-outlet>
