add metadata to pages and seperate inspo/testimonials

--- a/src/app/cart/cart-page/cart-page.component.html
+++ b/src/app/cart/cart-page/cart-page.component.html
@@ -1,3 +1,8 @@
+<head>
+  <title>Cart | Final Touch Decor</title>
+  <meta name="description" content="View your cart and proceed to checkout for your custom event rentals." />
+</head> 
+
 <div class="cart-page tan-background">
 
   <div class="cart-title-container">
