--- a/src/app/features/product-page/product-page.component.html
+++ b/src/app/features/product-page/product-page.component.html
@@ -1,3 +1,8 @@
+<head>
+    <Title>{{ product.name }} - Final Touch Decor</Title>
+    <meta name="description" content="{{ product.description }}" />
+</head>
+
 <body class="container white-background">
 
   <div class="tan-background body" *ngIf="!loading">
