--- a/src/app/home/homepage/custom/custom.component.html
+++ b/src/app/home/homepage/custom/custom.component.html
@@ -1,3 +1,7 @@
+<head>
+    <title>Custom Signage | Final Touch Decor</title>
+    <meta name="description" content="Learn about our customizable signage options for your event. Whether you're looking for a welcome sign, seating chart, or something unique, we've got you covered." />
+</head>
 <body>
     <div class="container">
         <section class="custom-left-container">
