--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -1,26 +1,17 @@
+<head>
+    <Title>Customer Testimonials - Final Touch Decor</Title>
+    <meta name="description" content="Read what our clients say about Final Touch Decor\'s luxury event rental services. Real reviews from satisfied customers who trusted us with their special events." />
+</head>
+
 <body class="white-background topDiv">
     <app-error-banner></app-error-banner>
     
-    <section *ngIf="inspoOpen" class="open-section">
+    <section class="open-section">
         <div class="header-container tan-background">
             <div class="header-image-container">
-                <img class="title" src="images/inspo-title.png" alt="Inspiration Title">
+                <img class="title" src="images/testimonials-title.png" alt="Testimonials Title">
             </div>
-            <p class="side-text right-text" (click)="togglePage()">See Customer Testimonials</p>
-        </div>
-        <div class="inspo-grid-container">
-            <div *ngFor="let photo of inspoPhotos" class="inspo-photo">
-                <img [src]="photo" alt="Inspiration Photo">
-            </div>
-        </div>
-    </section>
-
-    <section *ngIf="!inspoOpen" class="open-section">
-        <div class="header-container tan-background">
-            <div class="header-image-container">
-                <img class="title" src="images/testimonials-title.png" alt="Inspiration Title">
-            </div>
-            <p class="side-text right-text" (click)="togglePage()">See Inspo Photos</p>
+            <p class="side-text right-text" (click)="navigateToInspo()">See Inspo Photos</p>
         </div>
         <div class="reviews-container">
             <div *ngFor="let review of reviews" class="review">
@@ -36,5 +27,4 @@
             </div>
         </div>
     </section>
-
 </body>
