--- a/src/app/features/product-page/reserve/reserve.component.html
+++ b/src/app/features/product-page/reserve/reserve.component.html
@@ -53,7 +53,7 @@
       type="button"
       (touchstart)="this.tooltip.show();"
     >
-      ADD TO CART
+      ADD TO INQUIRY LIST
     </button>
   </span>
 
