--- a/src/app/home/homepage/custom/custom.component.html
+++ b/src/app/home/homepage/custom/custom.component.html
@@ -14,12 +14,12 @@
                 and let us help bring your vision to life with quality materials and 
                 a personal touch.            
             </p>
-            <button class="button-theme green-background" (click)="goToCustomShop($event)">Shop Custom</button>
+            <button class="button-theme green-background" (click)="goToCustomShop($event)">Browse Custom</button>
         </section>
 
         <picture class="custom-right-container">
-          <source srcset="/images/custom-signage.webp" type="image/webp">
-          <img class="custom-image" src="/images/custom-signage.png">
+          <source srcset="/images/custom.webp" type="image/webp">
+          <img class="custom-image" src="/images/custom.png">
           <p class="cursive-font red-font handmade-tagline">Handmade with love</p>
         </picture>
 
