--- a/src/app/home/homepage/how-it-works/how-it-works.component.html
+++ b/src/app/home/homepage/how-it-works/how-it-works.component.html
@@ -21,7 +21,7 @@
                 <p class="step-title">Pick Up</p>
                 <p>
                     Grab your decor from our downtown Boise location at your scheduled pickup time. 
-                    We’ll have everything packed and ready to go.
+                    We’ll have everything packed and ready to go. See our <a class="setup-options" (click)="goToServices($event)">setup packages</a>
                 </p>
             </div>
         </div>
