--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -9,8 +9,8 @@
                 <a class="link" (click)="routeTo('/privacy-policy', $event)">Privacy Policy</a>
             </div>
             <div class="links-container">
-                <p>SHOP</p>
-                <a class="link" (click)="routeTo('/shop', $event)">Shop All</a>
+                <p>BROWSE</p>
+                <a class="link" (click)="routeTo('/shop', $event)">Browse Our Collection</a>
                 <a class="link" (click)="routeToCustomShop($event)">Custom</a>
                 <a class="link" (click)="routeToWithFilter('Signage', $event)">Signage</a>
                 <a class="link" (click)="routeToWithFilter('Lighting', $event)">Lighting</a>
