--- a/src/app/cart/checkout/checkout.component.css
+++ b/src/app/cart/checkout/checkout.component.css
@@ -118,11 +118,19 @@ body {
 }
 
 input,
-textarea {
+textarea,
+select {
   padding: 0.75rem;
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 1rem;
+}
+
+.service-link {
+  font-size: 0.9rem;
+  padding: 0;
+  margin: 0;
+  margin-top: -10px;
 }
 
 /* Field-level error messages */
