--- a/src/app/home/homepage/hero/hero.component.html
+++ b/src/app/home/homepage/hero/hero.component.html
@@ -13,7 +13,7 @@
             <p class="location-text secondary-font green-font">SERVING BOISE AND THE TREASURE VALLEY</p>
         </div>
         <h1 class="title">Elevate Your Event with<br>Beautiful, Earth-Friendly<br>Decor Rentals</h1>
-        <button (click)="routeToShop($event)" class="button-theme green-background">shop now</button>
+        <button (click)="routeToShop($event)" class="button-theme green-background">Browse Our Collection</button>
         <br><br>
     </div>
 </section>
