--- a/src/app/home/homepage/how-it-works/how-it-works.component.css
+++ b/src/app/home/homepage/how-it-works/how-it-works.component.css
@@ -44,6 +44,16 @@
     padding: 0px 20%;
 }
 
+.setup-options {
+    text-decoration: underline;
+    font-style: italic;
+}
+
+.setup-options:hover {
+    cursor: pointer;
+    text-decoration: none;
+}
+
 
 @media (max-width: 700px) {
 
