--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,11 +4,13 @@
     </a>
     <nav class="nav-links">
         <a href="/home" class="links">Home</a>
-        <a href="/shop" class="links">Shop</a>
+        <a href="/shop" class="links">Browse</a>
         <a href="/inspo" class="links">Inspo</a>
-        <a href="/faqs" class="links">FAQs</a>
+        <a href="/services" class="links">Services</a>
+        <!-- <a href="/faqs" class="links">FAQs</a> -->
+
         <div class="cart-link-container">
-            <a href="/cart"><i class="fa fa-shopping-cart links cart-icon"></i></a>
+            <a href="/cart"><i class="fa fa-heart links cart-icon" aria-hidden="true"></i></a>
             <span class="cart-notification" *ngIf="cartCount > 0">{{ cartCount }}</span>
         </div>
    </nav>
